--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "~4.9.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
-    "ejs": "~0.8.5"
+    "ejs": "~0.8.5",
+    "express": "~4.9.0",
+    "morgan": "~1.3.0",
+    "mysql": "^2.9.0",
+    "pg": "^4.4.3",
+    "sequelize": "^3.14.2",
+    "serve-favicon": "~2.1.3"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^2.2.1"
   }
 }
