--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express"         : "~4.6.1",
-    "morgan"          : "~1.1.1",
-    "body-parser"     : "~1.4.3",
-    "method-override" : "~2.1.1",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "~1.4.3",
+    "express": "~4.6.1",
+    "express-session": "^1.12.1",
+    "method-override": "~2.1.1",
+    "morgan": "~1.1.1",
     "mysql": "^2.9.0",
     "pg": "^4.4.3",
     "sequelize": "^3.14.2"
