--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.4.3",
     "express": "~4.6.1",
-    "express-session": "^1.12.1",
+    "jsonwebtoken": "^5.4.1",
     "method-override": "~2.1.1",
     "morgan": "~1.1.1",
     "mysql": "^2.9.0",
     "pg": "^4.4.3",
-    "sequelize": "^3.14.2"
+    "sequelize": "^3.14.2",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "sequelize-cli": "^2.2.1"
